<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offline_occlusion_filter</name>
  <version>0.0.0</version>
  <description>The occlusion_filter packege</description>
  <maintainer email="yuta.hatakeyama@tier4.jp">yutahatakeyama</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
